login register page update, animation working with z index but register overlaps login- currently fixing animations

--- a/src/css/LoginRegister.scss
+++ b/src/css/LoginRegister.scss
@@ -1,3 +1,23 @@
+input {
+    background-color: #1c2839;
+    color: #c14259;
+    border-radius: 15px;
+    outline: none !important;
+    font-family: sans-serif;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    border-color: #e35a7356;
+    box-sizing: border-box;
+    padding-left: 30px;
+}
+
+input:focus {
+    outline: none !important;
+    border-color: #e35a74;
+    color: #e35a74;
+}
+
 .log-reg-container {
     position: relative;
     max-height: 100vh;
@@ -11,9 +31,9 @@
     width: 100vw;
 }   
 
-.index-100 {
+.index-10 {
     position: absolute;
-    z-index: 100;
+    z-index: 5;
 }
 
 .log-reg-bg {
@@ -53,8 +73,62 @@
     font-family: sans-serif;
 }
 
+.log-reg-card-btn {
+    width: 100%;
+    height: 55px;
+}
+
 .btn-container {margin: 80vh 0 0 38vw;}
 
 .register-btn {margin-left: 25px;}
 
 .login-btn {margin-right: 25px;}
+
+.log-reg-card {
+    padding: 70px;
+    background: rgba(255, 255, 255, 0.18);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.5px);
+    -webkit-backdrop-filter: blur(7.5px);
+    border: 1px solid #e35a74;
+    position: absolute;
+    margin: 25vh 0 0 36vw;
+    z-index: 100;
+}
+
+.login-card {
+    height: 300px;
+    width: 20%;
+}
+
+.register-card {
+    height: 500px;
+    width: 25%;
+}
+
+.log-reg-fullinput {
+    height: 50px;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.log-reg-halfinput {
+    height: 50px;
+    width: 47.5%;
+    margin-bottom: 30px;
+}
+
+.log-reg-card-txt {
+    color: #c14259;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 8px;
+    font-size: 25px;
+    text-align: center;
+    font-weight: 600;
+}
+
+.container {
+    z-index: 100;
+}
